--- a/css/main.css
+++ b/css/main.css
@@ -515,6 +515,10 @@ footer{
         color: #86340A;
         font-size: 20px;
         text-align: center;
+        transition: all 1s ease;
+    }
+    .social-network:hover{
+        transform: skew(10deg, 5deg);
     }
     .developer{
         display: inline-block;
